# AsusAuraRGBUtility

./: Ackowledgements.txt  AuraDevice.cpp  AuraDevice.hpp  CMakeLists.txt  GalaxHOFGraphicsCard.cpp  GalaxHOFGraphicsCard.hpp  HIDDevices.cpp  HIDDevices.hpp  main.cpp
IO/: AuraDevice.cpp  AuraDevice.hpp  HIDDeviceInterface.cpp  HIDDeviceInterface.h
Libraries/Frozen/include/frozen/: set.h
Utilities/: HardwareUtility.cpp  HardwareUtility.h  Utility.hpp
